samples/_failures_safe/1761632951_cf8f42_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_60de0477.c: In function ‘main’:
./samples/SAFE/__tmp_60de0477.c:158:16: error: missing terminating " character
  158 |         printf("No valid log entries
      |                ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_60de0477.c:158:9: error: expected expression at end of input
  158 |         printf("No valid log entries
      |         ^~~~~~
./samples/SAFE/__tmp_60de0477.c:158:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_60de0477.c:158:9: error: expected declaration or statement at end of input
